# io

./: .bazelrc  .travis.yml  README.md  RELEASE.md  WORKSPACE  azure-pipelines.yml  client.py  client2.py  configure.sh  data.proto  data_pb2.py  data_pb2_grpc.py  dataset_pb2.py  dataset_pb2_grpc.py  hello_pb2.py  hello_pb2_grpc.py  server.py  server2.py  setup.py
.github/workflows/: api.yml  build.yml  codeql-analysis.yml  release.note.yml  release.yml  suggest.yml
.travis/: bazel.install.sh  pip.install.sh  python.configure.sh  python.install.sh
foo/core/mlir/: BUILD.bazel  foo.cc  foo_opt.cc
foo/core/mlir/tests/: lit.cfg.py  ops.mlir
proto/: dataset.proto  hello.proto
tensorflow_io/audio/kernels/: audio_kernels.cc
tensorflow_io/audio/ops/: audio_ops.cc
tensorflow_io/core/: BUILD
tensorflow_io/core/kernels/: audio_video_mp4_kernels.cc  azfs_kernels.cc  ffmpeg_kernels.cc  genome_fastq_kernels.cc  graphics_kernels.cc  image_avif_kernels.cc  image_openexr_kernels.cc  io_interface.h  io_optimization.cc  kafka_kernels.cc  (+4 more)
tensorflow_io/numpy/: BUILD
tensorflow_io/stream/: BUILD
tensorflow_io/video/: __init__.py
tensorflow_io/vm/: BUILD  __init__.py
tests/: test_audio_eager.py  test_audio_ops_eager.py  test_gcs_eager.py  test_hdf5_eager.py  test_io_dataset_eager.py  test_io_layer.py  test_io_tensor_eager.py  test_kafka_eager.py  test_llvm.py  test_py.py  test_redis_eager.py  test_serialization_eager.py  test_video_eager.py  test_vm_eager.py
tests/test_kafka/: kafka_test.sh
tests/test_redis/: redis_test.sh
tools/release/: note_update.py
(+59 files in other folders)
